# go4

./: .gitignore  .project  AGENTS.md  CHANGES.txt  CMakeLists.txt  Go4License.txt  IconsLicense.txt  Makefile  Makefile.config  Makefile.distr  Makefile.rules  Makefile_taskhandler  README.md  README.txt  README_threadm.txt  README_win.txt  go4.init  go4.patch  go4onlylogin.sh  header.txt
Go4EventServerExample/: CMakeLists.txt  Go4EventServerExampleLinkDef.h  MainGo4EventServerExample.cxx  Makefile  Module.mk  TGo4SimpleEvent.cxx  TGo4SimpleEvent.h  TGo4SimpleEventProcessor.cxx  TGo4SimpleEventProcessor.h  TGo4SimpleSubEvent.cxx  TGo4SimpleSubEvent.h
Go4Example1Step/: CMakeLists.txt  Go4UserAnalysisLinkDef.h  MainUserAnalysis.cxx  Makefile  Module.mk  Readme.md  Readme.txt  TXXXAnalysis.cxx  TXXXAnalysis.h  TXXXControl.cxx  TXXXControl.h  TXXXEvent.cxx  TXXXEvent.h  TXXXParam.cxx  TXXXParam.h  TXXXProc.cxx  TXXXProc.h  XXXLinkDef.h  go4logfile.txt  histofill.C  setfill.C  setoutput.C
Go4Example2Step/: AnalysisStart.sh  CMakeLists.txt  MainUserAnalysis.cxx  Makefile  Makefile.win  Module.mk  Readme.md  Readme.txt  TXXXAnalysis.cxx  TXXXAnalysis.h  TXXXAnlEvent.cxx  TXXXAnlEvent.h  TXXXAnlFact.cxx  TXXXAnlFact.h  TXXXAnlProc.cxx  TXXXAnlProc.h  TXXXCalibPar.cxx  TXXXCalibPar.h  TXXXParameter.cxx  TXXXParameter.h  TXXXUnpackEvent.cxx  TXXXUnpackEvent.h  TXXXUnpackFact.cxx  TXXXUnpackFact.h  TXXXUnpackProc.cxx  TXXXUnpackProc.h  XXXLinkDef.h  browse.C  convert.C  convertfile.C  plothistos.C  rename.sh  set_Par.C  setparam.C  setup.C
Go4ExampleAdvanced/: CMakeLists.txt  Makefile  Makefile.win  Readme.md  Readme.txt  TXXXAnalysis.cxx  TXXXAnalysis.h  TXXXAnlEvent.cxx  TXXXAnlEvent.h  TXXXAnlProc.cxx  TXXXAnlProc.h  TXXXCalibPar.cxx  TXXXCalibPar.h  TXXXParameter.cxx  TXXXParameter.h  TXXXUnpackEvent.cxx  TXXXUnpackEvent.h  TXXXUnpackProc.cxx  TXXXUnpackProc.h  XXXLinkDef.h  calilines.txt  convert.C  convertfile.C  findobjects.C  gaussfiles.lml  plothistos.C  setup.C
Go4ExampleDabc/: CMakeLists.txt  Makefile  Readme.md  Readme.txt  TXXXProc.cxx  TXXXProc.h  XXXLinkDef.h
Go4ExampleMesh/: CMakeLists.txt  MainUserAnalysis.cxx  Makefile  MeshLinkDef.h  Module.mk  Readme.md  Readme.txt  TMeshAnalysis.cxx  TMeshAnalysis.h  TMeshB12AnlProc.cxx  TMeshB12AnlProc.h  TMeshB12OutputEvent.cxx  TMeshB12OutputEvent.h  TMeshB1AnlProc.cxx  TMeshB1AnlProc.h  TMeshB1InputEvent.cxx  TMeshB1InputEvent.h  TMeshB1OutputEvent.cxx  TMeshB1OutputEvent.h  TMeshB2AnlProc.cxx  TMeshB2AnlProc.h  TMeshB2InputEvent.cxx  TMeshB2InputEvent.h  TMeshB2OutputEvent.cxx  TMeshB2OutputEvent.h  TMeshB3AnlProc.cxx  TMeshB3AnlProc.h  TMeshB3InputEvent.cxx  TMeshB3InputEvent.h  TMeshB3OutputEvent.cxx  TMeshB3OutputEvent.h  TMeshDummyEvent.cxx  TMeshDummyEvent.h  TMeshFinalEvent.cxx  TMeshFinalEvent.h  TMeshFinalProc.cxx  TMeshFinalProc.h  TMeshParameter.cxx  TMeshParameter.h  TMeshProviderProc.cxx  (+5 more)
Go4ExampleUserSource/: AnalysisStart.sh  CMakeLists.txt  MainUserAnalysis.cxx  Makefile  Module.mk  README.txt  Readme.md  Readme.txt  TYYYAnalysis.cxx  TYYYAnalysis.h  TYYYEventSource.cxx  TYYYEventSource.h  TYYYParameter.cxx  TYYYParameter.h  TYYYRawEvent.cxx  TYYYRawEvent.h  TYYYUnpackEvent.cxx  TYYYUnpackEvent.h  TYYYUnpackFact.cxx  TYYYUnpackFact.h  TYYYUnpackProc.cxx  TYYYUnpackProc.h  YYYLinkDef.h  befoil50.scf  tafoil50.scf
Go4ExampleUserStore/: CMakeLists.txt  Makefile  Readme.md  Readme.txt  TXXXAnalysis.cxx  TXXXAnalysis.h  TXXXControl.cxx  TXXXControl.h  TXXXEvent.cxx  TXXXEvent.h  TXXXProc.cxx  TXXXProc.h  TXXXStore.cxx  TXXXStore.h  XXXLinkDef.h
Go4FitExample/: CMakeLists.txt  Example1.cxx  Example10.cxx  Example11.cxx  Example12.cxx  Example13.cxx  Example2.cxx  Example2Func.cxx  Example3.cxx  Example3Func.f  Example4.cxx  Example4LinkDef.h  Example5.cxx  Example6.cxx  Example6.root  Example7.cxx  Example7.root  Example8.cxx  Example9.cxx  Makefile  Makefile.standalone  Module.mk  README  TModelTemplate.cxx  TModelTemplate.h  histograms.root
Go4HistogramServer/: CMakeLists.txt  Go4HistogramServerLinkDef.h  MainGo4ObjectClient.cxx  Module.mk  ObjectClient.C  TGo4HisConnectorRunnable.cxx  TGo4HisConnectorRunnable.h  TGo4HistogramServer.cxx  TGo4HistogramServer.h  TGo4MbsHist.cxx  TGo4MbsHist.h  TGo4ObjClient.cxx  TGo4ObjClient.h  TGo4ObjConnectorRunnable.cxx  TGo4ObjConnectorRunnable.h  TGo4ObjConnectorTimer.cxx  TGo4ObjConnectorTimer.h
Go4Queue/: CMakeLists.txt  MainGo4Queue.cxx  Module.mk  TGo4Buffer.h  TGo4BufferQueue.cxx  TGo4BufferQueue.h  TGo4ObjectQueue.cxx  TGo4ObjectQueue.h  TGo4Queue.cxx  TGo4Queue.h
Go4TaskHandlerExample/: CMakeLists.txt  Go4CommandsTaskExample.h  Go4TaskHandlerExampleLinkDef.h  MainGo4TaskHandlerClient.cxx  MainGo4TaskHandlerServer.cxx  Makefile  Module.mk  Readme.md  TGo4ComAction1.cxx  TGo4ComAction1.h  TGo4ComAction2.cxx  TGo4ComAction2.h  TGo4ControllerRunnable.cxx  TGo4ControllerRunnable.h  TGo4ExampleApplication.cxx  TGo4ExampleApplication.h  TGo4ExampleClient.cxx  TGo4ExampleClient.h  TGo4ExampleClientStatus.cxx  TGo4ExampleClientStatus.h  TGo4ExampleCommand.cxx  TGo4ExampleCommand.h  TGo4ExampleCommandList.cxx  TGo4ExampleCommandList.h  TGo4ExampleController.cxx  TGo4ExampleController.h  TGo4ExampleServer.cxx  TGo4ExampleServer.h  TGo4LoggingRunnable.cxx  TGo4LoggingRunnable.h  TGo4MainRunnable.cxx  TGo4MainRunnable.h  TGo4WatchRunnable.cxx  TGo4WatchRunnable.h
Go4ThreadManagerExample/: CMakeLists.txt  Go4ThreadManagerExampleLinkDef.h  MainGo4ThreadManagerExample.cxx  Makefile  Module.mk  Readme.md  TGo4TestRunnable.cxx  TGo4TestRunnable.h  TGo4TestThreadManager.cxx  TGo4TestThreadManager.h
qt4/: CMakeLists.txt  Module.mk  go4.conf
qt4/Go4FitGUI/: Go4FitGUI.pro  Go4FitGUI4.pro  Module.mk  QFitAmplEstimWidget.cpp  QFitAmplEstimWidget.h  QFitAmplEstimWidget.ui  QFitDataWidget.cpp  QFitDataWidget.h  QFitDataWidget.ui  QFitDependencyWidget.cpp  QFitDependencyWidget.h  QFitDependencyWidget.ui  QFitItem.cpp  QFitItem.h  QFitLinearTransWidget.cpp  QFitLinearTransWidget.h  QFitLinearTransWidget.ui  QFitMatrixTransWidget.cpp  QFitMatrixTransWidget.h  QFitMinuitResWidget.cpp  (+66 more)
(+1493 files in other folders)
